Added buttons to main layout

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,5 +5,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.sk0g.wordsagainstfutility.MainActivity">
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp">
 
+        <Button
+            android:id="@+id/search_online_button"
+            android:layout_width="132dp"
+            android:layout_height="wrap_content"
+            tools:text="@string/search_button_label" />
+
+        <Button
+            android:id="@+id/next_word_button"
+            android:layout_width="131dp"
+            android:layout_height="wrap_content"
+            tools:text="@string/next_button_label" />
+    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
